--- a/stylesheet.css
+++ b/stylesheet.css
@@ -362,7 +362,7 @@ nav.valikko.scrolled {
 .infobtn {
     padding: 7px 13px 7px 13px;
     margin-right: 10px;
-    background-color: #ffffff00;
+    background-color: rgba(255, 255, 255, 0);;
     border-radius: 19px;
     font-size: 16px;
     border: solid 1px white;
