--- a/stylesheet.css
+++ b/stylesheet.css
@@ -256,7 +256,9 @@ nav.valikko.scrolled {
     box-shadow: 0 2px 11px 0px rgba(0,0,0,.164);
 }
 .valikko .menu {
-    max-width: 1400px;
+    width: 1400px;
+    max-width: 85%;
+    height: 55px;
     margin: 0 auto;
 }
 .logo {
@@ -268,7 +270,7 @@ nav.valikko.scrolled {
     list-style:none;
     padding:0;
     margin: 0;
-    display: inline-block;
+    display: inline;
 }
 #tstvalikko li.menu-item {
     float: left;
@@ -378,6 +380,7 @@ nav.valikko.scrolled {
     display: none;
     position: absolute;
     left: 0;
+    top: 55px;
     height: 200px;
     background-color: rgba(11, 47, 99, 0.95);
     color: white;
@@ -401,6 +404,7 @@ nav.valikko.scrolled {
     display: none;
     position: absolute;
     left: 0;
+    top: 55px;
     height: 200px;
     background-color: rgba(167, 128, 184, 0.95);
     color: white;
