--- a/styles.css
+++ b/styles.css
@@ -1,140 +1,158 @@
 /* ----- COLORS ----- */
 :root {
-    --blue: #007bff;
-    /*--blue: #2e5bff;*/
-    --darkblue: #1374dc;
-    --blue-neon: #0dffff;
-    --teal: #11cdef;
-    --lightgreen: #00d774;
-    --orange: #fd7e14;
-    --darkorange: #e07217;
-    --gray1: #f4f5f7;
-    --gray2: #e2e6ea;
-    --gray3: #6c757d;
-    --gray4: #343a40;
-    --green: #28a745;
-    --green-dark: #1c8935;
-    --red: #dc3545;
-    --red-dark: #c42e3d;
-    --red-bright: #ff3355;
-    --red-light: #ff6384;
-    --purple-light: #5e72e4;
-    --purple: #6f42c1;
-    --purple-dark: rgb(112, 48, 160);
+  --blue: #007bff;
+  /*--blue: #2e5bff;*/
+  --darkblue: #1374dc;
+  --blue-neon: #0dffff;
+  --teal: #11cdef;
+  --lightgreen: #00d774;
+  --orange: #fd7e14;
+  --darkorange: #e07217;
+  --gray1: #f4f5f7;
+  --gray2: #e2e6ea;
+  --gray3: #6c757d;
+  --gray4: #343a40;
+  --green: #28a745;
+  --green-dark: #1c8935;
+  --red: #dc3545;
+  --red-dark: #c42e3d;
+  --red-bright: #ff3355;
+  --red-light: #ff6384;
+  --purple-light: #5e72e4;
+  --purple: #6f42c1;
+  --purple-dark: rgb(112, 48, 160);
 }
-  /*------------------------*/
+/*------------------------*/
 
 html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(40, 40, 40);
-    overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(40, 40, 40);
+  overflow: hidden;
 }
 
 canvas {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .controls {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    width: 250px;
-    padding: 0 1em 1em 1em;
-    background-color: rgb(255 255 255 / 60%);
-    border-radius: 15px;
-    max-height: 95%;
-    overflow: auto;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  width: 250px;
+  padding: 0 0.2em 1em 1em;
+  background-color: rgb(255 255 255 / 60%);
+  border-radius: 15px;
+  max-height: 95%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.controls::-webkit-scrollbar-track {
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+ /*border-radius: 10px;*/
+}
+.controls::-webkit-scrollbar {
+ width: 1em;
+}
+.controls::-webkit-scrollbar-thumb {
+  background-color: var(--blue);
+  border: 5px solid transparent;
+  border-radius: 15px;
+  background-clip: padding-box;
+}
+.controls::-webkit-scrollbar-thumb:hover {
+background-color: var(--darkblue);
 }
 
 .controls .section {
-    border-bottom: solid 1px rgb(255 255 255 / 60%);
-    margin: 1em 0 0 0;
-    padding: 0 0 1em;
+  border-bottom: solid 1px rgb(255 255 255 / 60%);
+  margin: 1em 0 0 0;
+  padding: 0 0 1em;
 }
 
 .controls h3 {
-    padding: 0;
-    margin: 0 0 0.5em 0;
-    color: #005aff;
-    font-weight: 600;
+  padding: 0;
+  margin: 0 0 0.5em 0;
+  color: #005aff;
+  font-weight: 600;
 }
 
 .controls output {
-    color: #005aff;
+  color: #005aff;
 }
 
 .controls .slider_container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 table.sliders {
-    width: 100%;
+  width: 100%;
 }
 
 .sliders input {
-    width: 100%;
+  width: 100%;
 }
 
 #fps-container {
-    position: absolute;
-    top: 1em;
-    left: 1em;
-    color: white;
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  color: white;
 }
 
 /* ----- Toggle switch ----- */
 /* The switch - the box around the slider */
 .switch {
-    position: relative;
-  }
-  /* Hide default HTML checkbox */
-  .switch input {
-    position: absolute;
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  /* The slider */
-  .slider {
-    border-radius: 10px;
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    vertical-align: middle;
-    height: 15px;
-    width: 34px;
-    background-color: var(--gray2);
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-  }
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 11px;
-    width: 11px;
-    left: 3px;
-    bottom: 2px;
-    background-color: white;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.21);
-    border-radius: 5px;
-  }
-  input:checked + .slider {
-    background-color: var(--blue);
-  }
-  input:checked + .slider.del {
-    background-color: var(--red-bright);
-  }
-  input:checked + .slider:before {
-    transform: translateX(17px);
-  }
-  /* ----------------------- */
+  position: relative;
+}
+/* Hide default HTML checkbox */
+.switch input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+/* The slider */
+.slider {
+  border-radius: 10px;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  vertical-align: middle;
+  height: 15px;
+  width: 34px;
+  background-color: var(--gray2);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 11px;
+  width: 11px;
+  left: 3px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.21);
+  border-radius: 5px;
+}
+input:checked + .slider {
+  background-color: var(--blue);
+}
+input:checked + .slider.del {
+  background-color: var(--red-bright);
+}
+input:checked + .slider:before {
+  transform: translateX(17px);
+}
+/* ----------------------- */
